--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,8 @@ export(get_match_meta)
 export(get_match_stats)
 export(get_player_stats)
 export(get_tournament_matches)
+export(get_tournaments)
+export(get_tournaments_pro)
 export(progressively)
 export(save_it)
+export(str_extract_href)
